added project logos

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <section id="about" class="section-page">
             <div class="container text-center">
                 <h2 class="display-1 mb-5">About Me</h2>
-                <img src="/img/Innovation-amico.svg" height="250" class="p-3 mb-5" />
+                <img src="/img/Hawkstone Backyard.jpg" height="450" class="p-3 mb-5" />
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         I am a software developer based in Alpharetta, GA. I mainly use C# and .net to build web
@@ -290,8 +290,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/BugTracker_600.jpg" />
-                                    <img src="/img/logos/BugTracker_200.jpg" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/bugtrax.png"/>
+                                    <img src="/img/Anyas/bugtrax.png"/>
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -308,8 +308,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/Contact_Pro.png" />
-                                    <img src="/img/logos/Contact_Pro.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/addressbook.png" />
+                                    <img src="/img/Anyas/addressbook.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -326,8 +326,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/Tech_Talk.png" />
-                                    <img src="/img/logos/Tech_Talk.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/intheweeds.png" />
+                                    <img src="/img/Anyas/intheweeds.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -357,8 +357,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/LoanShark_600.png" />
-                                    <img src="/img/logos/LoanShark_200.png" />
+                                    <source media="(min-width: 992px)" srcset="img/Anyas/palindrome.png" />
+                                    <img src="/img/Anyas/palindrome.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -375,8 +375,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/tacocat_600.png" />
-                                    <img src="/img/logos/tacocat_200.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/mortgage.png" />
+                                    <img src="/img/Anyas/mortgage.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -392,8 +392,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/Tasker_600.png" />
-                                    <img src="/img/logos/Tasker_200.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/eventhound.png" />
+                                    <img src="/img/Anyas/eventhound.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -409,8 +409,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/Superdog_600.jpg" />
-                                    <img src="/img/logos/Superdog_200.jpg" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/reverse.png" />
+                                    <img src="/img/Anyas/reverse.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -426,8 +426,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/fizzbuzz_600.jpg" />
-                                    <img src="/img/logos/fizzbuzz_200.jpg" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/fizzbuzz.png"/>
+                                    <img src="/img/Anyas/fizzbuzz.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -443,8 +443,8 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/logos/Notary_600.jpg" />
-                                    <img src="/img/logos/Notary_600.jpg" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/hundred.png"/>
+                                    <img src="/img/Anyas/hundred.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
@@ -646,7 +646,7 @@
 
     </main>
     <!-- footer -->
-    <footer class="py-3 fixed-bottom" data-bs-theme="dark">
+    <footer class=" py-1 fixed-bottom" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="row align-items-center g-3">
                 <div class="col-3">
@@ -658,7 +658,7 @@
                     <div class="card shadow">
                         <div class="card-body text-center text-body-emphasis">
                             <!-- To Do: Change to Our Link -->
-                            Check out my <a href="#">Bug Tracker</a>!
+                            Check out my <a href="#">Bug Tracker</a>
                         </div>
                     </div>
                 </div>
