enabled netlify form

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="mainHeader">
                     <div class="mainTitle text-center">
                         <img src="/img/alan(4).png" class="img-fluid w-75">
-                        <a href="#contact" class="btn btn-primary mt-3 w-50">CONTACT ME</a>
+                        <a href="#contact" class="btn btn-dark">CONTACT ME</a>
                     </div>
                 </div>
         </section>
@@ -603,7 +603,7 @@
         <section id="contact" class="section-page">
             <h2>Contact Me</h2>
             <div class="card card-body">
-                <form action="#">
+                <form name="PortfolioContact" method="post" netlify>
                     <div class="row row-cols-1 mt-2">
                         <div class="col col-md-6">
                             <label for="FirstName" class="form-label">First Name</label>
@@ -650,7 +650,7 @@
         <div class="container-fluid">
             <div class="row align-items-center g-3">
                 <div class="col-3">
-                    <img src="/img/waves mark.png" alt="Logo" height="40">
+                    <img src="/img/starmark.png" alt="Logo" height="40">
                     <img src="/img/anya(1).png" alt="Logo" height="40">
 
                 </div>
