--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                     <p>
                                         A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
                                     </p>
-                                    <button type="button" class="btn btn-primary"></button><a href="#">Learn
+                                    <button type="button" class="btn btn-primary"><a href="#">Learn
                                         More</a></button>
                                 </div>
                             </div>
@@ -618,7 +618,7 @@
                         <div class="col col-md-6 mt-2">
                             <label for="Email" class="form-label">Email</label>
                             <input aria-label="Email" class="form-control" name="Email" id="Email" type="email"
-                                placeholder="email" required />
+                                placeholder="Email" required />
                         </div>
                         <div class="col col-md-6 mt-2">
                             <label for="Phone" class="form-label">Phone</label>
