another icon change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="/css/hovercard.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="/img/favicon-32x32.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -114,15 +114,13 @@
         <!-- landing screen -->
         <section id="home">
             <div id="homeCover">
-                <div class="row mainHeader ">
-                    <div class="col-9 mainTitle text-end">
+                <div class="row-col-1 mainHeader ">
+                    <div class="col mainTitle">
                         <img src="/img/Anyas/title.png" class="img-fluid w-100">
                     </div>
-                    <div class="col-3">
-                        <div class="row gy-1">
-                       <div class="col-12"><img src="/img/Anyas/bird1.png" class="img-fluid" width="60rem"></div>
-                        <div class="col-12"><a href="#contact" class="btn btn-dark">CONTACT</a></div>
-                        <div class="col-12"><a href="#" class="btn btn-dark">RESUME</a></div>
+                    <div class="col d-flex"></div>
+                        <div><a href="#contact" class="btn btn-dark">CONTACT</a></div>
+                        <div><a href="#" class="btn btn-dark">RESUME</a></div>
                     </div>
                     </div>
 
@@ -131,8 +129,8 @@
         <!-- about me section -->
         <section id="about" class="section-page">
             <div class="container text-center">
-                <h2 class="display-1 mb-5">About Me</h2>
-                <img src="/img/Hawkstone Backyard.jpg" height="450" class="p-3 mb-5" />
+                <h2 class="mb-5">About Me</h2>
+                <img src="/img/profilephoto.png" height="450" class="p-3 mb-5" />
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         I am a software developer based in Alpharetta, GA. I mainly use C# and .net to build web
@@ -147,7 +145,7 @@
         <!-- skills section -->
         <section id="skills" class="section-page">
             <div class="container">
-                <h2 class="text-center display-1 mb-5">What I Use</h2>
+                <h2 class="text-center mb-5">What I Use</h2>
                 <div class="row gy-5">
                     <div class="col-12 col-lg-6">
                         <div class="icon-card">
@@ -471,7 +469,7 @@
         <!-- blog -->
         <section id="blog" class="section-page">
             <div class="container">
-                <h2 class="display-1 mb-5 text-center">
+                <h2 class="mb-5 text-center">
                     Blog Stuff
                 </h2>
                 <p>I update this blog weekly. Featuring coding challenges and tech updates.</p>
