--- a/index.html
+++ b/index.html
@@ -114,15 +114,16 @@
         <!-- landing screen -->
         <section id="home">
             <div id="homeCover">
-                <div class="row-col-1 mainHeader ">
+                <div class="row-col-1 mainHeader">
                     <div class="col mainTitle">
                         <img src="/img/Anyas/title.png" class="img-fluid w-100">
                     </div>
-                    <div class="col d-flex"></div>
-                        <div><a href="#contact" class="btn btn-dark">CONTACT</a></div>
-                        <div><a href="#" class="btn btn-dark">RESUME</a></div>
+                    <div class="col mt-5" style="text-align: center;">
+                        <a href="#contact" class="btn btn-dark btn-lg btn-yellow">CONTACT</a> &nbsp;
+                        <a href="#" class="btn btn-dark btn-lg btn-yellow">RESUME</a>
                     </div>
-                    </div>
+                </div>
+            </div>
 
         </section>
         </div>
@@ -615,8 +616,8 @@
                         </div>
                         <div class="col col-md-6">
                             <label for="LastName" class="form-label">Last Name</label>
-                            <input aria-label="Last Name" class="form-control" name="LastName" id="LastName"
-                                type="text" placeholder="Last Name" required />
+                            <input aria-label="Last Name" class="form-control" name="LastName" id="LastName" type="text"
+                                placeholder="Last Name" required />
                         </div>
                         <div class="col col-md-6 mt-2">
                             <label for="Email" class="form-label">Email</label>
@@ -649,7 +650,7 @@
 
     </main>
     <!-- footer -->
-    <footer class=" py-1 fixed-bottom flex-nowrap" data-bs-theme="dark">
+    <footer class="fixed-bottom flex-nowrap" data-bs-theme="dark">
         <div class="container-fluid">
 
             <div class="row row-cols-1 g-3">
@@ -661,7 +662,7 @@
                 </div>
                 <div class="col-md-4 ">
                     <!-- To Do: Change to Our Link -->
-                        <div>Check out my <a href="#"> Bug Tracker</a></div>
+                    <div>Check out my <a href="#"> Bug Tracker</a></div>
                 </div>
                 <div class="col-md-4">
                     <a class="text-decoration-none" href="#">
