linked to app-reverse

--- a/index.html
+++ b/index.html
@@ -368,8 +368,7 @@
                                     <p>
                                         A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Learn
-                                            More</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -386,7 +385,7 @@
                                     <p>
                                         A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Learn More</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -403,7 +402,7 @@
                                     <p>
                                         A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Learn More</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -418,9 +417,9 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        This app takes in a string and reverses it!
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Learn More</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="https://reverse-abalan.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -435,9 +434,9 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        An app that takes in two values and arranges a set of numbers in a pattern, following the fizzbuzz propmt.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Learn More</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="https://fizzbuzz-abalan.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -452,9 +451,9 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        A simple app which takes in any two numbers, displays the range of numbers in between, and bolds the even ones.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Learn More</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="https://1234go.netlify.app">Try it</a></button>
                                 </div>
                             </div>
                         </div>
