--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        A quirky app that checks input text, to see if it's a palindrome. Using objects, for loops and boolean logic.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="https://palindrome-abalan.netlify.app">Try it</a></button>
                                 </div>
                             </div>
                         </div>
