--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A simple app which takes in any two numbers, displays the range of numbers in between, and bolds the even ones.
+                                        An API integration with TMDB. Showing the top 20 movies at any given time.
                                     </p>
                                     <button type="button" class="btn btn-primary"><a href="https://movielist-abalan.netlify.app/">Try it</a></button>
                                 </div>
