--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <section id="about" class="section-page">
             <div class="container text-center">
                 <h2 class="mb-5">About Me</h2>
-                <img src="/img/profilephoto.png" height="450" class="p-3 mb-5" />
+                <img src="/img/profilephoto.png" height="450" class="p-3 mb-5 img-fluid" />
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         I am a software developer based in Alpharetta, GA. I mainly use C# and .net to build web
@@ -649,21 +649,21 @@
 
     </main>
     <!-- footer -->
-    <footer class="fixed-bottom flex-nowrap" data-bs-theme="dark">
+    <footer class="fixed-bottom d-flex justify-content-between" data-bs-theme="dark">
         <div class="container-fluid">
 
-            <div class="row row-cols-1 g-3">
+            <div class="row row-cols-1 g-3 py-1">
 
-                <div class="col-md-4">
+                <div class="col col-6 col-md-4 text-start">
                     <img src="/img/Anyas/bird.png" alt="Logo" height="40">
                     <img src="/img/Anyas/greyname.png" alt="Logo" height="40">
 
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 text-center pt-2 bugTrackLink">
                     <!-- To Do: Change to Our Link -->
                     <div>Check out my <a href="#"> Bug Tracker</a></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col col-6 col-md-4 text-end">
                     <a class="text-decoration-none" href="#">
                         <i class="bi bi-linkedin p-2 socialIcons"></i>
                     </a>
