Made footer inline

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 
     </main>
     <!-- footer -->
-    <footer class="fixed-bottom d-flex justify-content-between" data-bs-theme="dark">
+    <footer class="fixed-bottom d-flex justify-content-between text-nowrap" data-bs-theme="dark">
         <div class="container-fluid">
 
             <div class="row row-cols-1 g-3 py-1">
