--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 
             <div class="row row-cols-1 g-3 py-1">
 
-                <div class="col col-6 col-md-4 text-start">
+                <div class="col col-6 col-md-4 text-start pt-1">
                     <img src="/img/Anyas/bird.png" alt="Logo" height="40">
                     <img src="/img/Anyas/greyname.png" alt="Logo" height="40">
 
