--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A quirky app that checks input text, to see if it's a palindrome. Using objects, for loops and boolean logic.
+                                        Check input text to see if it's a palindrome.
                                     </p>
                                     <button type="button" class="btn btn-primary"><a href="https://palindrome-abalan.netlify.app">Try it</a></button>
                                 </div>
@@ -383,7 +383,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        Calculate what a mortgage will really cost you.
                                     </p>
                                     <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
                                 </div>
@@ -400,9 +400,9 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        Track event attendance for your company.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="https://abalan-eventhound.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -417,7 +417,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        This app takes in a string and reverses it!
+                                        This app takes in a string and reverses it.
                                     </p>
                                     <button type="button" class="btn btn-primary"><a href="https://reverse-abalan.netlify.app/">Try it</a></button>
                                 </div>
@@ -434,7 +434,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        An app that takes in two values and arranges a set of numbers in a pattern, following the fizzbuzz propmt.
+                                       Two imput values make a set of numbers into a pattern, following the fizzbuzz propmt.
                                     </p>
                                     <button type="button" class="btn btn-primary"><a href="https://fizzbuzz-abalan.netlify.app/">Try it</a></button>
                                 </div>
@@ -446,7 +446,7 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/Anyas/hundred.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/movielist.png" />
                                     <img src="/img/Anyas/movielist.png" />
                                 </picture>
                                 <div class="hc-content">
@@ -608,7 +608,7 @@
             <div class="card card-body text-dark">
                 <form name="PortfolioContact" method="post" netlify>
                     <div class="row row-cols-1 mt-2">
-                        <div class="col col-md-6">
+                        <div class="col col-md-6 mb-2 mb-md-0">
                             <label for="FirstName" class="form-label">First Name</label>
                             <input aria-label="First Name" class="form-control" name="FirstName" id="FirstName"
                                 type="text" placeholder="First Name" required />
@@ -667,10 +667,10 @@
                     <a class="text-decoration-none" href="#">
                         <i class="bi bi-linkedin p-2 socialIcons"></i>
                     </a>
-                    <a class="text-decoration-none" href="#">
+                    <a class="text-decoration-none" href="https://github.com/A-Balan/Portfolio">
                         <i class="bi bi-github p-2 socialIcons"></i>
                     </a>
-                    <a class="text-decoration-none" href="mailto:ablan0326@gmail.com">
+                    <a class="text-decoration-none" href="mailto:abalan0326@gmail.com">
                         <i class="bi bi-envelope p-2 socialIcons"></i>
                     </a>
                 </div>
